Fixed anchor with arrow being too small

--- a/src/sass/mixins/_ui.scss
+++ b/src/sass/mixins/_ui.scss
@@ -231,7 +231,7 @@
   @include anchor();
 
   font-family: $ffSerif;
-  font-size: $fsMedium;
+  font-size: $fsTextBody;
   color: $darkerBlue;
 
   &::after {
